# scratchnn

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: Autograd.hpp  Layers.hpp  Losses.hpp  Tensor.hpp
notebooks/: 00_tensors.ipynb  01_mnist_mlp.ipynb  02_autodiff_and_backprop.ipynb  02_implementing_convolutions.ipynb
notebooks/.ipynb_checkpoints/: 02_autodiff_and_backprop-checkpoint.ipynb
scratchnn/: a.out  tensor.cpp  tensor.h  tensor_shared.cpp  tensor_shared.h  test_tensor.cpp
src/: Autograd.cpp  tensor.cpp
tests/: Autograd_test.cpp  CMakeLists.txt  Layers_test.cpp  Tensor_test.cpp  test_main.cpp  test_tensor.cpp
